--- a/css/css.css
+++ b/css/css.css
@@ -131,3 +131,22 @@ h1 .text-linethrough {
   right: 10px;
   color: #6f4288;
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity .5s;
+}
+
+.fade-enter,
+.fade-leave-to
+/* .fade-leave-active below version 2.1.8 */
+
+{
+  opacity: 0;
+}
+
+#empty-search {
+  background-color: #292b2959;
+  min-height: 25vh;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
