--- a/css/css.css
+++ b/css/css.css
@@ -1,11 +1,5 @@
 /* GENERAL MOCKUP STYLING */
 
-
-/* @font-face {
-  font-family: wayoshi;
-  src: url("wayoshi.ttf");
-} */
-
 * {
   font-family: 'Roboto', sans-serif;
 }
@@ -49,11 +43,12 @@ body,
   min-height: calc(var(--vh, 1vh) * 100);
 }
 
+#app {
+  background: url("../img/glamorous.svg"), linear-gradient(45deg, #ffa8519d, #ffe359a9);
+}
+
 main {
   height: 100%;
-  background: url("../img/glamorous.svg"), linear-gradient(45deg, #ffa8519d, #ffe359a9);
-  /* background-color: hsla(27, 98%, 54%, 0.308); */
-  /* background-image: url("../img/glamorous.svg"); */
   box-shadow: inset #292b29 0px 1px 20px 0px;
 }
 
@@ -63,14 +58,6 @@ a:active,
 a:visited {
   text-decoration: none;
   color: inherit;
-}
-
-.text-linethrough {
-  text-decoration: line-through;
-}
-
-h1 .text-linethrough {
-  font-size: 0.75em;
 }
 
 .modal-body img {
@@ -93,7 +80,7 @@ h1 .text-linethrough {
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform .9s;
+  transition: transform .75s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
@@ -132,21 +119,42 @@ h1 .text-linethrough {
   color: #6f4288;
 }
 
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity .5s;
-}
-
-.fade-enter,
-.fade-leave-to
-/* .fade-leave-active below version 2.1.8 */
-
-{
-  opacity: 0;
+.flip-card:hover h4 {
+  display: none;
 }
 
 #empty-search {
   background-color: #292b2959;
   min-height: 25vh;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+
+/* vue transition effects */
+
+.fade-enter-active {
+  transition: opacity 1.3s;
+}
+
+.fade-leave-active {
+  transition: opacity .15s;
+}
+
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
+
+/* Search bar animation */
+
+@media (min-width:768px) {
+  #search {
+    width: 160px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: flex-grow 0.4s ease-in-out;
+  }
+  #search:focus {
+    flex-grow: 1;
+  }
 }
