--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.f-permanent-marker {
+  font-family: 'Permanent Marker', sans-serif;
+}
+
 .bg-teal {
   background-color: var(--teal);
 }
@@ -61,19 +65,17 @@ a:visited {
   color: inherit;
 }
 
-.modal-body img {
-  width: 100px;
-  height: 100px;
-}
-
-.modal-dialog {
-  max-width: 850px;
-}
-
 .github-logo-mini {
   --size: 1.5em;
   width: var(--size);
   height: var(--size);
+}
+
+
+/* MODAL STYLES */
+
+.modal-body {
+  background: url("../img/glamorous.svg"), linear-gradient(225deg, aliceblue, #ffe359a9);
 }
 
 
@@ -95,35 +97,6 @@ a:visited {
   transition: transform .75s;
   transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-}
-
-.flip-card .flip-card-inner {
-  animation: twister 1s ease-in-out;
-}
-
-.flip-card:nth-child(odd) .flip-card-inner:nth-child(odd) {
-  animation: twister 1.8s ease-in-out .3s;
-}
-
-.flip-card:nth-child(3n-2) .flip-card-inner:nth-child(3n-2) {
-  animation: twister 1.6s cubic-bezier(0.68, -0.55, 0.265, 1.55) .8s;
-}
-
-.flip-card:nth-child(4th) .flip-card-inner:nth-child(4th) {
-  animation: twister 6s cubic-bezier(0.68, -0.55, 0.265, 1.55) .8s;
-}
-
-.flip-card:hover .flip-card-inner {
-  transform: rotateY(180deg);
-}
-
-@keyframes twister {
-  0% {
-    transform: rotateY(0deg);
-  }
-  100% {
-    transform: rotateY(720deg);
-  }
 }
 
 .flip-card-front,
@@ -166,6 +139,26 @@ a:visited {
   height: var(--size);
 }
 
+.flip-card .flip-card-inner {
+  animation: twister 1s ease-in-out;
+}
+
+.flip-card:nth-child(odd) .flip-card-inner:nth-child(odd) {
+  animation: twister 1.8s ease-in-out .3s;
+}
+
+.flip-card:nth-child(3n-2) .flip-card-inner:nth-child(3n-2) {
+  animation: twister 1.6s cubic-bezier(0.68, -0.55, 0.265, 1.55) .8s;
+}
+
+.flip-card:nth-child(4th) .flip-card-inner:nth-child(4th) {
+  animation: twister 6s cubic-bezier(0.68, -0.55, 0.265, 1.55) .8s;
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
 #empty-search {
   background-color: #292b2959;
   min-height: 25vh;
@@ -199,5 +192,14 @@ a:visited {
   }
   #search:focus {
     flex-grow: 1;
+  }
+}
+
+@keyframes twister {
+  0% {
+    transform: rotateY(0deg);
+  }
+  100% {
+    transform: rotateY(720deg);
   }
 }
