--- a/css/admin.css
+++ b/css/admin.css
@@ -2,17 +2,73 @@
   display: none;
 }
 
+main {
+  overflow: visible;
+}
+
 #table-wrapper {
   overflow-x: auto;
   width: 100%;
+  box-shadow: 10px 20px 50px -20px rgba(0, 0, 0, 0.486);
 }
 
-
-/* #tabla-modulos {
-  width: 100%;
-} */
+#tabla-modulos {
+  /* width: 100%; */
+}
 
 #tabla-modulos th,
 td {
   white-space: nowrap;
+}
+
+.fileUpload {
+  position: relative;
+  overflow: hidden;
+  margin: 10px;
+}
+
+.fileUpload input.upload {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  font-size: 20px;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+#subidaProgreso .progress {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+#subidaProgreso .progress-bar {
+  width: 0%;
+}
+
+#subidaProgreso {
+  opacity: 1;
+  transition: all 2s linear;
+}
+
+#vistaPreviaSubida {
+  max-width: 400px;
+  max-height: 250px;
+  display: none;
+  opacity: 0;
+  transition: opacity 3s linear;
+}
+
+#vistaPreviaSubida img {
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  /* max-height: 150px; */
+}
+
+.tooltip-inner img {
+  max-width: 100px;
 }
